--- a/css/screen.css
+++ b/css/screen.css
@@ -103,3 +103,8 @@ body {
   padding-bottom: 25px;
   font-size: 20px;
 }
+
+/* line 28, ../sass/style.scss */
+.portfolio-item {
+  margin-bottom: 25px;
+}
