--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,8 @@ body {
   padding-bottom: 25px;
   font-size: 20px;
 }
+
+/* line 28, ../sass/style.scss */
+.portfolio-item {
+  margin-bottom: 25px;
+}
