--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,8 @@ body {
 .portfolio-item {
   margin-bottom: 25px;
 }
+
+/* line 32, ../sass/style.scss */
+.project-title {
+  margin-bottom: 25px;
+}
